# DevMemory

./: .editorconfig  .gitignore  LICENSE  README.md
backend/: .env  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: aa97cb79b2a0_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/endpoints/: events.py  health.py  search.py  sessions.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  event.py  session.py
backend/app/schemas/: event.py  search.py  session.py
backend/app/services/: __init__.py  event.py  search.py  session.py  summary.py
backend/tests/: run_tests.py
cli/: README.md  pyproject.toml
cli/devmem/: __init__.py  client.py  config.py  display.py  main.py
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  PROGRESS.md  PROMPTS.md  SPECS.md  TASKS.md
extension/: README.md
