[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "devmem-cli"
version = "1.0.0"
description = "Developer Memory OS — CLI interface"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
devmem = "devmem.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devmem*"]
